TOPページ, WORKS, CONTACTの追加

--- a/style.css
+++ b/style.css
@@ -274,19 +274,207 @@ body {
 
 .skills-box p {
     font-size: 14px;
-    line-height: 20px;
     margin-top: 8px;
     margin-bottom: 0;
+    line-height: 20px;
 }
 
 
+/* WORKS */
+.works-title {
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
 
+.works-title::before {
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    background-color: #7ee11c;
+    vertical-align: middle;
+    margin-right: 10px;
+}
 
+.works-title::after {
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    background-color: #7ee11c;
+    vertical-align: middle;
+    margin-left: 10px;
+}
 
-
-
-
-
-.works img {
+.works-list {
+    list-style: none;
     width: 310px;
+    padding: 0;
+    margin: 0 auto;
+}
+
+.works-list li {
+    margin-bottom: 20px;
+}
+
+.works-list li:last-child {
+    margin-bottom: 0;
+}
+
+.works-list p {
+    margin: 0;
+}
+
+.works-list a {
+    display: block;
+}
+
+.works-list img {
+    display: block;
+    width: 310px;
+}
+.arrow {
+    width: 18px;
+    height: 18px;
+    margin-top: 30px;
+    margin-left:  auto;
+    margin-right: auto;
+    border-top: 1px solid #fff;
+    border-right: 1px solid #fff;
+    transform: rotate(135deg);
+}
+
+.more {
+    position: relative;
+    text-align: center;
+    font-size: 16px;
+    margin-top: 7px;
+    margin-bottom: 0;
+    line-height: 20px;
+}
+
+
+/* CONTACT */
+.contact-title {
+    margin-top: 70px;
+    margin-bottom: 40px;
+}
+
+.contact-title::before {
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    background-color: #1cc6e1;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.contact-title::after {
+    content: '';
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    background-color: #1cc6e1;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+
+.contact-box {
+    width: 335px;
+    margin: 0 auto;
+}
+
+.contact-explanation {
+    font-size: 14px;
+    margin: 0;
+    line-height: 25px;
+}
+
+.form {
+    margin-top: 40px;
+}
+
+.form-item {
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 6px;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.form-input {
+    width: 335px;
+    height: 30px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.form-input:last-child {
+    height: 185px;
+}
+
+.form-input input {
+    display: block;
+    border: none;
+    width: 335px;
+    height: 30px;
+    padding: 0;
+    font-size: 14px;
+}
+
+.form-input input {
+    border: none;
+}
+
+.input-large {
+    height: 185px;
+    margin-bottom: 40px;
+}
+
+.input-large input {
+    height: 185px;
+}
+
+.form-input input:focus {
+    border: 1px solid #1cc6e1;
+    outline: 0;
+}
+
+.required {
+      margin-left: 10px;
+      font-size: 12px;
+      color: #FF0000;
+      line-height: 20px;
+}
+
+.btn-send {
+    display: block;
+    width: 100px;
+    height: 35px;
+    margin: 0 auto;
+    padding-top: 4px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #000;
+    border: 1px solid #fff;
+    line-height: 20px;
+}
+
+.footer {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.icon-footer {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.icon-footer li{
+    margin-right: 20px;
+}
+
+.icon-sns li:last-child {
+    margin-right: 0;
 }
