齋藤さんレビューの修正

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
     top: 0;
     width: 375px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.4)
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 9999;
 }
 
 .header-title {
@@ -52,7 +53,6 @@ body {
     width: 20px;
     height: 2px;
     background-color: #fff;
-    transition: all .2s;
 }
 .icon-bar1 {
     top: 14px;
@@ -65,20 +65,25 @@ body {
 }
 
 /* メニューのモーダル */
+.header-open {
+    background-color: #000;
+}
+
 .nav-open .global-nav {
     right: 0;
 }
 .nav-open .icon-bar1 {
     transform: rotate(45deg);
     top: 20px;
+    height: 1px;
 }
 .nav-open .icon-bar2 {
-    width: 0;
-    left: 50%;
+    display: none;
 }
 .nav-open .icon-bar3 {
     transform: rotate(-45deg);
     top: 20px;
+    height: 1px;
 }
 
 .global-nav {
@@ -88,7 +93,6 @@ body {
     width: 375px; 
     height: 100vh;
     background-color: #000;
-    z-index: 200;
 }
 
 .global-nav ul {
@@ -355,22 +359,17 @@ body {
     display: block;
     width: 310px;
 }
-.arrow {
-    width: 18px;
-    height: 18px;
-    margin-top: 30px;
-    margin-left:  auto;
-    margin-right: auto;
-    border-top: 1px solid #fff;
-    border-right: 1px solid #fff;
-    transform: rotate(135deg);
+
+.arrow img {
+    display: block;
+    margin: 30px auto 6px;
 }
 
 .more {
     position: relative;
     text-align: center;
     font-size: 16px;
-    margin-top: 7px;
+    margin-top: 0;
     margin-bottom: 0;
     line-height: 20px;
 }
@@ -459,6 +458,11 @@ body {
 .form-input input:focus {
     border: 1px solid #1cc6e1;
     outline: 0;
+}
+
+.form-input input::placeholder {
+    font-size: 14px;
+    color: #999;
 }
 
 .required {
