--- a/css/style.css
+++ b/css/style.css
@@ -103,14 +103,15 @@ body {
   }
   .global-nav li {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 36px;
   }
   .nav-item {
     display: inline-block;
     text-decoration: none;
     font-size: 28px;
+    font-weight: 500;
     color: #fff;
-    padding-bottom: 6px;
+    padding-bottom: 7px;
     line-height: 20px;
   }
 
@@ -362,6 +363,8 @@ body {
 
 .arrow img {
     display: block;
+    width: 32px;
+    height: 13px;
     margin: 30px auto 6px;
 }
 
@@ -462,6 +465,13 @@ body {
 
 .form-input input::placeholder {
     font-size: 14px;
+    font-weight: 500;
+    color: #999;
+}
+
+.form-input input::-webkit-placeholder {
+    font-size: 14px;
+    font-weight: 500;
     color: #999;
 }
 
