--- a/css/works.css
+++ b/css/works.css
@@ -1,7 +1,14 @@
 @charset "UTF-8";
 
-.back {
+/* ヘッダー */
+.btn-back {
+    position: absolute;
+    margin-top: 19px;
+    margin-left: 20px;
+}
 
+.btn-back img {
+    display: block;
 }
 
 .works-wrap {
@@ -16,4 +23,88 @@
 
 .works-image img {
     width: 335px;
+}
+
+.works-item-title {
+    margin-top: 26px;
+    width: 220px;
+    border-bottom: 1px solid #7ee11c;
+}
+
+.works-item-title h1 {
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
+}
+
+.use-skills {
+    margin-top: 13px;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.season-time {
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.works-explanation {
+    width: 335px;
+    margin-top: 30px;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+}
+
+.works-explanation a {
+    text-decoration: none;
+    color: #1492e6;
+}
+
+.works-explanation img {
+    width: 14px;
+    height: 14px;
+    margin-left: 5px;
+}
+
+.works-move {
+    overflow: hidden;
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+.works-prev {
+    display: block;
+    float: left;
+    text-align: left;
+    margin-left: 0;
+}
+
+.works-prev a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.icon-prev {
+    margin-right: 7px;
+}
+
+.works-next {
+    display: block;
+    float: right;
+    margin-right: 0;
+}
+
+.works-next a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.icon-next {
+    margin-left: 7px;
 }
