--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,21 @@
 
 body {
     width: 375px;
-    font-family: 'Lato', sans-serif, 'ヒラギノ角ゴ Pro';
+    font-family: 'Lato', 'Noto Sans JP', sans-serif;
     margin: 0 auto;
     color: #fff;
     background-color: #000;
+}
+
+.fixed {
+	position: fixed;
 }
 
 /* ヘッダー */
 /* ヘッダータイトル */
 .header {
     position: fixed;
-    left: 0;
+    margin: 0 auto;
     top: 0;
     width: 375px;
     height: 50px;
@@ -121,6 +125,8 @@ body {
 .nav-open .icon-bar1 {
     transform: rotate(45deg);
     top: 20px;
+    left: 9px;
+    width: 23px;
     height: 1px;
 }
 .nav-open .icon-bar2 {
@@ -129,6 +135,8 @@ body {
 .nav-open .icon-bar3 {
     transform: rotate(-45deg);
     top: 20px;
+    left: 9px;
+    width: 23px;
     height: 1px;
 }
 
