--- a/css/works.css
+++ b/css/works.css
@@ -35,7 +35,7 @@
     margin-top: 0;
     margin-bottom: 5px;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 300;
     line-height: 20px;
 }
 
@@ -57,8 +57,8 @@
     width: 335px;
     margin-top: 30px;
     font-size: 14px;
+    font-weight: 300;
     line-height: 24px;
-    letter-spacing: -0.1px;
 }
 
 .works-explanation a {
@@ -107,4 +107,20 @@
 
 .icon-next {
     margin-left: 7px;
+}
+
+
+/* @cosmeアプリ DL訴求バナー*/
+.app-atcosme-title {
+    width: 255px;
+}
+
+/* ビューティデイバナー*/
+.beautyday-title {
+    width: 243px;
+}
+
+/* メンズコスメバナー*/
+.mens-cosme-title {
+    width: 167px;
 }
