--- a/css/works.css
+++ b/css/works.css
@@ -1,94 +1,116 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 
 /* ヘッダー */
 .btn-back {
-	position: absolute;  margin-top: 19px;  margin-left: 20px;
+    position: absolute;
+    margin-top: 19px;
+    margin-left: 20px;
 }
 
 .btn-back img {
-	display: block;
+    display: block;
 }
 
 .works-wrap {
-	width: 335px;  margin: 55px auto 0;  margin-top: 55px;
+    width: 335px;
+    margin: 55px auto 0;
+    margin-top: 55px;
 }
 
 .works-image {
-	width: 335px;
+    width: 335px;
 }
 
 .works-image img {
-	width: 335px;
+    display: block;
+    width: 335px;
 }
 
 .works-item-title {
-	width: 220px;  margin-top: 26px;  border-bottom: 1px solid #7ee11c;
+
+    margin-top: 26px;
 }
 
 .works-item-title h1 {
-	margin-top: 0;  margin-bottom: 5px;  font-size: 18px;  font-weight: 300;  line-height: 20px;
+    display: inline-block;
+    width: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 5px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 20px;
+    border-bottom: 1px solid #7ee11c;
 }
 
 .use-skills {
-	margin-top: 13px;  margin-bottom: 0;  font-size: 14px;  line-height: 20px;
+    margin-top: 13px;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .season-time {
-	margin-top: 10px;  margin-bottom: 0;  font-size: 14px;  line-height: 20px;
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .works-explanation {
-	width: 335px;  margin-top: 30px;  font-size: 14px;  font-weight: 300;  line-height: 24px;
+    width: 335px;
+    margin-top: 30px;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 24px;
 }
 
 .works-explanation a {
-	color: #1492e6;  text-decoration: none;
+    text-decoration: none;
+    color: #1492e6;
 }
 
 .works-explanation img {
-	width: 14px;  height: 14px;  margin-left: 5px;
+    width: 14px;
+    height: 14px;
+    margin-left: 5px;
 }
 
 .works-move {
-	overflow: hidden;  margin-top: 25px;  margin-bottom: 30px;
+    overflow: hidden;
+    margin-top: 25px;
+    margin-bottom: 30px;
 }
 
 .works-prev {
-	display: block;  float: left;  margin-left: 0;  text-align: left;
+    display: block;
+    float: left;
+    text-align: left;
+    margin-left: 0;
 }
 
 .works-prev a {
-	color: #fff;  text-decoration: none;
+    text-decoration: none;
+    color: #fff;
 }
 
 .icon-prev {
-	margin-right: 7px;
+    margin-right: 7px;
 }
 
 .works-next {
-	display: block;  float: right;  margin-right: 0;
+    display: block;
+    float: right;
+    margin-right: 0;
 }
 
 .works-next a {
-	color: #fff;  text-decoration: none;
+    text-decoration: none;
+    color: #fff;
 }
 
 .icon-next {
-	margin-left: 7px;
+    margin-left: 7px;
 }
 
 
-/* @cosmeアプリ DL訴求バナー*/
-.app-atcosme-title {
-	width: 248px;
-}
-
-/* ビューティデイバナー*/
-.beautyday-title {
-	width: 220px;
-}
-
-/* メンズコスメバナー*/
-.mens-cosme-title {
-	width: 170px;
-}
