疑似要素のの共通化

--- a/css/style.css
+++ b/css/style.css
@@ -309,16 +309,7 @@ body {
     margin-bottom: 50px;
 }
 
-.works-title::before {
-    content: '';
-    display: inline-block;
-    width: 40px;
-    height: 1px;
-    background-color: #7ee11c;
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
+.works-title::before,
 .works-title::after {
     content: '';
     display: inline-block;
@@ -326,6 +317,13 @@ body {
     height: 1px;
     background-color: #7ee11c;
     vertical-align: middle;
+}
+
+.works-title::before {
+    margin-right: 10px;
+}
+
+.works-title::after {
     margin-left: 10px;
 }
 
@@ -380,16 +378,7 @@ body {
     margin-bottom: 40px;
 }
 
-.contact-title::before {
-    content: '';
-    display: inline-block;
-    width: 40px;
-    height: 1px;
-    background-color: #1cc6e1;
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
+.contact-title::before,
 .contact-title::after {
     content: '';
     display: inline-block;
@@ -397,6 +386,13 @@ body {
     height: 1px;
     background-color: #1cc6e1;
     vertical-align: middle;
+}
+
+.contact-title::before {
+    margin-right: 10px;
+}
+
+.contact-title::after {
     margin-left: 10px;
 }
 
@@ -473,11 +469,7 @@ body {
     outline: 0;
 }
 
-.form-input input::placeholder {
-    font-size: 14px;
-    color: #999;
-}
-
+.form-input input::placeholder,
 .form-input input::-webkit-placeholder {
     font-size: 14px;
     color: #999;
@@ -486,7 +478,7 @@ body {
 .required {
     margin-left: 10px;
     font-size: 12px;
-    color: #FF0000;
+    color: #ff0000;
     line-height: 20px;
 }
 
