--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
     top: 0;
     width: 375px;
     height: 50px;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, .4);
     z-index: 9999;
 }
 
@@ -454,16 +454,12 @@ body {
     height: 185px;
     padding: 5px 7px;
     font-size: 14px;
-    letter-spacing: -0.1px;
+    line-height: 20px;
     border-radius: 0;
     -webkit-border-radius : 0;
 }
 
-.form-input input:focus {
-    border: 1px solid #1cc6e1;
-    outline: 0;
-}
-
+.form-input input:focus,
 .form-input textarea:focus {
     border: 1px solid #1cc6e1;
     outline: 0;
