--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 
 body {
-    width: 375px;
-    font-family: 'Lato', 'Noto Sans JP', \30D2\30E9\30AE\30CE\89D2\30B4\20Pro\20W3, 'Hiragino Kaku Gothic Pro', \30E1\30A4\30EA\30AA, Meiryo, \FF2D\FF33\20\FF30\30B4\30B7\30C3\30AF, 'MS PGothic', sans-serif;
-    margin: 0 auto;
-    color: #fff;
-    background-color: #000;
+	width: 375px;
+	margin: 0 auto;
+	background-color: #000;
+	color: #fff;
+	font-family: 'Lato', 'Noto Sans JP', \30D2\30E9\30AE\30CE\89D2\30B4\20Pro\20W3, 'Hiragino Kaku Gothic Pro', \30E1\30A4\30EA\30AA, Meiryo, \FF2D\FF33\20\FF30\30B4\30B7\30C3\30AF, 'MS PGothic', sans-serif;
 }
 
 .fixed {
@@ -14,514 +14,512 @@ body {
 
 /* ヘッダー */
 .header {
-    position: fixed;
-    margin: 0 auto;
-    top: 0;
-    width: 375px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, .4);
-    z-index: 9999;
+	position: fixed;
+	top: 0;
+	z-index: 9999;
+	width: 375px;
+	height: 50px;
+	margin: 0 auto;
+	background-color: rgba(0, 0, 0, .4);
 }
 
 /* ヘッダータイトル */
 .header-title {
-    width: 200px;
-    height: 17px;
-    margin: 16px auto;
-    font-size: 14px;
-    line-height: 20px;
+	width: 200px;
+	height: 17px;
+	margin: 16px auto;
+	font-size: 14px;
+	line-height: 20px;
 }
 .header-title a {
-    display: block;
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
+	display: block;
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
 }
 
 /* メニュー */
 .btn-icon {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 4px;
-    right: 10px;
-    color: #fff;
-    cursor: pointer;
-    z-index: 300;
+	position: absolute;
+	top: 4px;
+	right: 10px;
+	z-index: 300;
+	width: 40px;
+	height: 40px;
+	color: #fff;
+	cursor: pointer;
 }
 
 .icon-bar {
-    position: absolute;
-    left: 10px;
-    width: 20px;
-    height: 2px;
-    background-color: #fff;
+	position: absolute;
+	left: 10px;
+	width: 20px;
+	height: 2px;
+	background-color: #fff;
 }
 
 .icon-bar1 {
-    top: 14px;
+	top: 14px;
 }
 
 .icon-bar2 {
-    top: 20px;
+	top: 20px;
 }
 
 .icon-bar3 {
-    top: 26px;
+	top: 26px;
 }
 
 /* メニューモーダル */
 .global-nav {
-    position: fixed;
-    right: -375px; 
-    top: 50;
-    width: 375px; 
-    height: 100vh;
-    background-color: #000;
+	position: fixed;
+	top: 50;
+	right: -375px;
+	width: 375px;
+	height: 100vh;
+	background-color: #000;
 }
 
 .global-nav ul {
-    margin-top: 134px;
-    padding: 0;
-    list-style: none;
+	list-style: none;
+	margin-top: 134px;
+	padding: 0;
 }
 
 .global-nav li {
-    text-align: center;
-    margin-bottom: 36px;
+	margin-bottom: 36px;
+	text-align: center;
 }
 
 .nav-item {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 28px;
-    color: #fff;
-    padding-bottom: 7px;
-    line-height: 20px;
+	display: inline-block;
+	padding-bottom: 7px;
+	color: #fff;
+	font-size: 28px;
+	line-height: 20px;
+	text-decoration: none;
 }
 
 .nav-top {
-    border-bottom: 1px solid #f5b400;
-  }
+	border-bottom: 1px solid #f5b400;
+}
 
 .nav-about {
-    border-bottom: 1px solid #c21ce1;
+	border-bottom: 1px solid #c21ce1;
 }
 
 .nav-works {
-    border-bottom: 1px solid #5de11c;
+	border-bottom: 1px solid #5de11c;
 }
 
 .nav-contact {
-    border-bottom: 1px solid #1ce1e1;
+	border-bottom: 1px solid #1ce1e1;
 }
 
 /* メニューモーダル展開時 */
 .header-open {
-    background-color: #000;
+	background-color: #000;
 }
 
 .nav-open .global-nav {
-    right: 0;
+	right: 0;
 }
 .nav-open .icon-bar1 {
-    transform: rotate(45deg);
-    top: 20px;
-    left: 9px;
-    width: 23px;
-    height: 1px;
+	top: 20px;
+	left: 9px;
+	width: 23px;
+	height: 1px;
+	transform: rotate(45deg);
 }
 .nav-open .icon-bar2 {
-    display: none;
+	display: none;
 }
 .nav-open .icon-bar3 {
-    transform: rotate(-45deg);
-    top: 20px;
-    left: 9px;
-    width: 23px;
-    height: 1px;
+	top: 20px;
+	left: 9px;
+	width: 23px;
+	height: 1px;
+	transform: rotate(-45deg);
 }
 
 
 /* メインビジュアル */
 .main-visual {
-    width: 375px;
-    height: 450px;
-    margin-top: 50px;
+	width: 375px;
+	height: 450px;
+	margin-top: 50px;
 }
 
-.main-visual img{
-    width: 375px;
+.main-visual img {
+	width: 375px;
 }
 
 
 /* セクション共通 */
 .section-title {
-    text-align: center;
-    font-size: 20px;
+	font-size: 20px;
+	text-align: center;
 }
 
 .prof-box {
-    width: 315px;
-    margin: 0 auto;
+	width: 315px;
+	margin: 0 auto;
 }
 
 .sub-title {
-    text-align: center;
-    font-size: 18px;
-    line-height: 20px;
-    margin-top: 50px;
-    margin-bottom: 0;
+	margin-top: 50px;
+	margin-bottom: 0;
+	font-size: 18px;
+	line-height: 20px;
+	text-align: center;
 }
 
 
 /* ABOUT */
 .about-title {
-    margin-top: 60px;
-    margin-bottom: 50px;
+	margin-top: 60px;
+	margin-bottom: 50px;
 }
 
-.about-title::before, .about-title::after {
-    content: '';
-    display: inline-block;
-    width: 40px;
-    height: 1px;
-    background-color: #c21ce1;
-    vertical-align: middle;
+.about-title::before,
+.about-title::after {
+	display: inline-block;
+	width: 40px;
+	height: 1px;
+	background-color: #c21ce1;
+	vertical-align: middle;
+	content: '';
 }
 
 .about-title::before {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .about-title::after {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .about-visual img {
-    width: 375px;
+	width: 375px;
 }
 
 /* PROFILE */
 .name {
-    font-size: 22px;
-    line-height: 20px;
-    margin-top: 40px;
-    margin-bottom: 0;
+	margin-top: 40px;
+	font-size: 22px;
+	line-height: 20px;
 }
 
 .name-en {
-    font-size: 14px;
-    line-height: 20px;
-    margin-top: 3px;
+	margin-top: 3px;
+	font-size: 14px;
+	line-height: 20px;
 }
 
 .prof-text {
-    width: 315px;
-    font-size: 14px;
-    line-height: 25px;
-    margin-top: 30px;
+	width: 315px;
+	margin-top: 30px;
+	font-size: 14px;
+	line-height: 25px;
 }
 
 /* SNSアイコン */
 .icon-sns {
-    list-style: none;
-    height: 30px;
-    margin-top: 30px;
-    padding: 0;
+	list-style: none;
+	height: 30px;
+	margin-top: 30px;
+	padding: 0;
 }
 
 .icon-sns li {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    margin-right: 20px;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	margin-right: 20px;
 }
 
 .icon-sns li:last-child {
-    margin-right: 0;
+	margin-right: 0;
 }
 
 .icon-sns a {
-    display: inline-block;
+	display: inline-block;
 }
 
 .icon-sns img {
-    width: 30px;
+	width: 30px;
 }
 
-/* DESIGN COADING */ 
+/* DESIGN COADING */
 .tech-icon {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
-.tech-icon img{
-    display: block;
-    width: 60px;
-    margin: 0 auto;
+.tech-icon img {
+	display: block;
+	width: 60px;
+	margin: 0 auto;
 }
 
 /* SKILLS */
 
 .skills-box {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
 }
 
 .skills-box:last-child {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 
 .skills-box ul {
-    text-align: center;
-    margin: 0;
-    list-style: none;
-    padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
 }
 
 .skills-box li {
-    width: 105px;
-    margin-bottom: 30px;
+	width: 105px;
+	margin-bottom: 30px;
 }
 
 .skills-box li:last-child {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .skills-box img {
-    display: block;
-    width: 65px;
-    margin: 0 auto;
+	display: block;
+	width: 65px;
+	margin: 0 auto;
 }
 
 .skills-box p {
-    font-size: 14px;
-    margin-top: 8px;
-    margin-bottom: 0;
-    line-height: 20px;
+	margin-top: 8px;
+	font-size: 14px;
+	line-height: 20px;
 }
 
 
 /* WORKS */
 .works-title {
-    margin-top: 70px;
-    margin-bottom: 50px;
+	margin: 70px 0 50px;
 }
 
 .works-title::before,
 .works-title::after {
-    content: '';
-    display: inline-block;
-    width: 40px;
-    height: 1px;
-    background-color: #7ee11c;
-    vertical-align: middle;
+	display: inline-block;
+	width: 40px;
+	height: 1px;
+	background-color: #7ee11c;
+	vertical-align: middle;
+	content: '';
 }
 
 .works-title::before {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .works-title::after {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .works-list {
-    list-style: none;
-    width: 310px;
-    padding: 0;
-    margin: 0 auto;
+	list-style: none;
+	width: 310px;
+	margin: 0 auto;
+	padding: 0;
 }
 
 .works-list li {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .works-list li:last-child {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .works-list p {
-    margin: 0;
+	margin: 0;
 }
 
 .works-list a {
-    display: block;
+	display: block;
 }
 
 .works-list img {
-    display: block;
-    width: 310px;
+	display: block;
+	width: 310px;
 }
 
 .arrow img {
-    display: block;
-    width: 32px;
-    height: 13px;
-    margin: 30px auto 6px;
+	display: block;
+	width: 32px;
+	height: 13px;
+	margin: 30px auto 6px;
 }
 
 .more {
-    position: relative;
-    text-align: center;
-    font-size: 16px;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 20px;
+	position: relative;
+	font-size: 16px;
+	line-height: 20px;
+	text-align: center;
 }
 
 
 /* CONTACT */
 .contact-title {
-    margin-top: 70px;
-    margin-bottom: 40px;
+	margin-top: 70px;
+	margin-bottom: 40px;
 }
 
 .contact-title::before,
 .contact-title::after {
-    content: '';
-    display: inline-block;
-    width: 40px;
-    height: 1px;
-    background-color: #1cc6e1;
-    vertical-align: middle;
+	display: inline-block;
+	width: 40px;
+	height: 1px;
+	background-color: #1cc6e1;
+	vertical-align: middle;
+	content: '';
 }
 
 .contact-title::before {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .contact-title::after {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .contact-box {
-    width: 335px;
-    margin: 0 auto;
+	width: 335px;
+	margin: 0 auto;
 }
 
 .contact-explanation {
-    font-size: 14px;
-    margin: 0;
-    line-height: 25px;
+	margin: 0;
+	font-size: 14px;
+	line-height: 25px;
 }
 
 .form {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 
 .form-item {
-    display: inline-block;
-    margin-top: 0;
-    margin-bottom: 6px;
-    font-size: 16px;
-    line-height: 20px;
+	display: inline-block;
+	margin-top: 0;
+	margin-bottom: 6px;
+	font-size: 16px;
+	line-height: 20px;
 }
 
 .form-input {
-    width: 328px;
-    height: 30px;
-    margin-top: 0;
-    margin-bottom: 20px;
+	width: 328px;
+	height: 30px;
+	margin-top: 0;
+	margin-bottom: 20px;
 }
 
 .form-input:last-child {
-    height: 185px;
+	height: 185px;
 }
 
 .form-input input {
-    display: block;
-    border: none;
-    width: 328px;
-    height: 30px;
-    padding-left: 7px;
-    font-size: 14px;
-    border-radius: 0;
-    -webkit-border-radius : 0;
+	display: block;
+	width: 328px;
+	height: 30px;
+	padding-left: 7px;
+	border: none;
+	        border-radius: 0;
+	font-size: 14px;
+
+	-webkit-border-radius: 0;
 }
 
 .input-large {
-    width: 335px;
-    height: 185px;
-    margin-bottom: 40px;
+	width: 335px;
+	height: 185px;
+	margin-bottom: 40px;
 }
 
 .form-input textarea {
-    display: block;
-    border: none;
-    width: 321px;
-    height: 185px;
-    padding: 5px 7px;
-    font-size: 14px;
-    line-height: 20px;
-    border-radius: 0;
-    -webkit-border-radius : 0;
+	display: block;
+	width: 321px;
+	height: 185px;
+	padding: 5px 7px;
+	border: none;
+	        border-radius: 0;
+	font-size: 14px;
+	line-height: 20px;
+
+	-webkit-border-radius: 0;
 }
 
 .form-input input:focus,
 .form-input textarea:focus {
-    border: 1px solid #1cc6e1;
-    outline: 0;
+	border: 1px solid #1cc6e1;
+	outline: 0;
 }
 
 .form-input input::placeholder,
 .form-input input::-webkit-placeholder {
-    font-size: 14px;
-    color: #999;
+	color: #999;
+	font-size: 14px;
 }
 
 .required {
-    margin-left: 10px;
-    font-size: 12px;
-    color: #ff0000;
-    line-height: 20px;
+	margin-left: 10px;
+	color: #f00;
+	font-size: 12px;
+	line-height: 20px;
 }
 
 .btn-send {
-    display: block;
-    width: 100px;
-    height: 35px;
-    margin: 0 auto;
-    padding-top: 1px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #000;
-    border: 1px solid #fff;
-    line-height: 20px;
+	display: block;
+	width: 100px;
+	height: 35px;
+	margin: 0 auto;
+	padding-top: 1px;
+	border: 1px solid #fff;
+	background-color: #000;
+	color: #fff;
+	font-size: 16px;
+	line-height: 20px;
 }
 
 .footer {
-    margin-top: 70px;
-    text-align: center;
+	margin-top: 70px;
+	text-align: center;
 }
 
 .icon-footer {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 #page-top {
-    width: 64px;
-    height: 27px;
-    position: fixed;
-    right: 20px;
-    bottom: 37px;
-    background: #333;
-    vertical-align: middle;
+	position: fixed;
+	right: 20px;
+	bottom: 37px;
+	width: 64px;
+	height: 27px;
+	background: #333;
+	vertical-align: middle;
 }
 
 #page-top a {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    width: 64px;
-    height: 27px;
-    font-size: 16px;
-    color: #fff;
-    line-height: 28px;
+	display: inline-block;
+	position: relative;
+	width: 64px;
+	height: 27px;
+	color: #fff;
+	font-size: 16px;
+	line-height: 28px;
+	text-decoration: none;
 }
 
 .copyright {
-    display: inline-block;
-    margin-bottom: 35px;
+	display: inline-block;
+	margin-bottom: 35px;
 }
