--- a/css/style.css
+++ b/css/style.css
@@ -264,16 +264,17 @@ body {
 /* SKILLS */
 
 .skills-box {
-	display: flex;
-	justify-content: center;
-	margin-top: 30px;
+    width: 315px;
+    margin: 30px auto 40px;
 }
 
 .skills-box:last-child {
-	margin-top: 40px;
+	margin-bottom: 0;
 }
 
 .skills-box ul {
+    display: flex;
+    flex-wrap: wrap;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -285,8 +286,8 @@ body {
 	margin-bottom: 30px;
 }
 
-.skills-box li:last-child {
-	margin-bottom: 0;
+.skills-box li:nth-last-child(-n+2) {
+    margin-bottom: 0;
 }
 
 .skills-box img {
