--- a/css/style.css
+++ b/css/style.css
@@ -265,11 +265,11 @@ body {
 
 .skills-box {
     width: 315px;
-    margin: 30px auto 40px;
+    margin: 30px auto 10px;
 }
 
 .skills-box:last-child {
-	margin-bottom: 0;
+	margin: 0 auto;
 }
 
 .skills-box ul {
@@ -284,10 +284,6 @@ body {
 .skills-box li {
 	width: 105px;
 	margin-bottom: 30px;
-}
-
-.skills-box li:nth-last-child(-n+2) {
-    margin-bottom: 0;
 }
 
 .skills-box img {
