--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,30 @@ body {
 	width: 310px;
 }
 
+.arrow {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.arrow::before {
+    display: inline-block;
+    content: '';
+    width: 20px;
+    border-top: solid 1px #fff;
+    transform: rotate(35deg);
+}
+
+.arrow::after {
+    display: inline-block;
+    content: '';
+    width: 20px;
+    border-top: solid 1px #fff;
+    transform: rotate(-35deg);
+}
+
 .arrow img {
 	display: block;
 	width: 32px;
