--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .fixed {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 /* ヘッダー */
@@ -460,9 +460,8 @@ body {
 	height: 30px;
 	padding-left: 7px;
 	border: none;
-	        border-radius: 0;
+	border-radius: 0;
 	font-size: 14px;
-
 	-webkit-border-radius: 0;
 }
 
@@ -478,10 +477,9 @@ body {
 	height: 185px;
 	padding: 5px 7px;
 	border: none;
-	        border-radius: 0;
+	border-radius: 0;
 	font-size: 14px;
 	line-height: 20px;
-
 	-webkit-border-radius: 0;
 }
 
@@ -554,14 +552,48 @@ body {
 
 /* 送信完了モーダル */
 .send-done {
-    position: fixed;
+	position: fixed;
 	top: 50;
 	right: -375px;
 	width: 375px;
-    height: 100vh;
+	height: 100vh;
 	background-color: #000;
+	text-align: center;
 }
 
 .send-modal-open {
-    right: 0;
+	right: 0;
+}
+
+.send-wording {
+	margin-top: 152px;
+	font-size: 20px;
+	line-height: 25px;
+}
+
+.attention {
+	display: inline-block;
+	width: 296px;
+	margin-top: 15px;
+	font-size: 14px;
+	line-height: 25px;
+	text-align: left;
+}
+
+.back-top {
+	margin-top: 35px;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 20px;
+}
+
+.back-top::before {
+	display: inline-block;
+	width: 5px;
+	height: 5px;
+	margin-right: 5px;
+	border-top: 1px solid #fff;
+	border-right: 1px solid #fff;
+	transform: rotate(45deg);
+	content: '';
 }
